// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js?ver=3a35395ff71216ac1a55",
    194,
    {
      "fullhash": "3a35395ff71216ac1a55",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.super-compressed.js.gz?ver=3a35395ff71216ac1a55",
      },
      "size": 194,
    },
  ],
  [
    "async.async.super-compressed.js.gz?ver=3a35395ff71216ac1a55",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.js?var=3a35395ff71216ac1a55",
    16249,
    {
      "fullhash": "3a35395ff71216ac1a55",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.super-compressed.js.gz?var=3a35395ff71216ac1a55",
      },
      "size": 16249,
    },
  ],
  [
    "main.super-compressed.js.gz?var=3a35395ff71216ac1a55",
    4051,
    {
      "compressed": true,
      "immutable": true,
      "size": 4051,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "assets/js/async.async.js.super-compressed.gz?ver=b8666abd065dd38fbf96#hash",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "assets/js/async.async.js?ver=b8666abd065dd38fbf96#hash",
    194,
    {
      "fullhash": "b8666abd065dd38fbf96",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/js/async.async.js.super-compressed.gz?ver=b8666abd065dd38fbf96#hash",
      },
      "size": 194,
    },
  ],
  [
    "assets/js/main.js.super-compressed.gz?var=b8666abd065dd38fbf96#hash",
    4068,
    {
      "compressed": true,
      "immutable": true,
      "size": 4068,
    },
  ],
  [
    "assets/js/main.js?var=b8666abd065dd38fbf96#hash",
    16275,
    {
      "fullhash": "b8666abd065dd38fbf96",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=b8666abd065dd38fbf96#hash",
      },
      "size": 16275,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    {
      "compressed": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    {
      "compressed": true,
      "size": 672,
    },
  ],
  [
    "async.async.js.gz?ver=254a8eeac01330fb31dc",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.async.js?ver=254a8eeac01330fb31dc#hash",
    194,
    {
      "fullhash": "254a8eeac01330fb31dc",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "async.async.js.gz?ver=254a8eeac01330fb31dc",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz?var=254a8eeac01330fb31dc",
    16254,
    {
      "compressed": true,
      "size": 16254,
    },
  ],
  [
    "main.js?var=254a8eeac01330fb31dc#hash",
    16254,
    {
      "fullhash": "254a8eeac01330fb31dc",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "main.js.gz?var=254a8eeac01330fb31dc",
      },
      "size": 16254,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    {
      "compressed": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz?ver=254a8eeac01330fb31dc",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=254a8eeac01330fb31dc#hash",
    194,
    {
      "fullhash": "254a8eeac01330fb31dc",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz?ver=254a8eeac01330fb31dc",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz?var=254a8eeac01330fb31dc",
    4053,
    {
      "compressed": true,
      "size": 4053,
    },
  ],
  [
    "main.js?var=254a8eeac01330fb31dc#hash",
    16254,
    {
      "fullhash": "254a8eeac01330fb31dc",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz?var=254a8eeac01330fb31dc",
      },
      "size": 16254,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `[]`;

exports[`"filename" option show work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "assets/scripts/async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "assets/scripts/async.async.js?ver=4d4706d9b803750f62e2#hash",
    194,
    {
      "fullhash": "4d4706d9b803750f62e2",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/scripts/async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "assets/scripts/main.js.gz",
    4070,
    {
      "compressed": true,
      "immutable": true,
      "size": 4070,
    },
  ],
  [
    "assets/scripts/main.js?var=4d4706d9b803750f62e2#hash",
    16280,
    {
      "fullhash": "4d4706d9b803750f62e2",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 16280,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `[]`;

exports[`"filename" option show work: warnings 1`] = `[]`;
